# laguna

./: .gitmodules  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
common-native/nativeInterop/: libgit2.def
common-native/src/com/jdiazcano/laguna/: laguna.kt
common-native/src/com/jdiazcano/laguna/git/: git.kt
common/src/com/jdiazcano/laguna/: GitActions.kt  LagunaKorteConfiguration.kt  LagunaTemplateConfiguration.kt  laguna.kt  template.kt
common/src/com/jdiazcano/laguna/files/: binaryfile.kt  file.kt  files.kt  outputs.kt
common/src/com/jdiazcano/laguna/git/: git.kt
common/src/com/jdiazcano/laguna/misc/: colors.kt  misc.kt
common/tst/com.jdiazcano.laguna.files/: fileTest.kt
docker/: Dockerfile
jvm/src/com/jdiazcano/laguna/: laguna.kt
jvm/src/com/jdiazcano/laguna/files/: File.kt
jvm/src/com/jdiazcano/laguna/git/: GitRepository.kt  git.kt
jvm/src/com/jdiazcano/laguna/misc/: misc.kt
linux/src/com/jdiazcano/laguna/: laguna.kt
linux/src/com/jdiazcano/laguna/files/: File.kt
linux/src/com/jdiazcano/laguna/git/: GitRepository.kt  git.kt
linux/src/com/jdiazcano/laguna/misc/: misc.kt
macos/src/com/jdiazcano/laguna/files/: file.kt
macos/src/com/jdiazcano/laguna/git/: git.kt
macos/src/com/jdiazcano/laguna/misc/: misc.kt
src/: errorcode.rs  filters.rs  git.rs  main.rs  ocean.rs  renderer.rs  templater.rs
windows/src/com/jdiazcano/laguna/: laguna.kt
