[package]
name = "laguna"
version = "0.1.0"
authors = ["jdiazcano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = "3.0.0-beta.1"
colored = "2.0.0"

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

dirs = "3.0.1"
whoami = "0.9.0"

git2 = "0.13.10"
url = "2.1.1"
dialoguer = "0.6.2"