[package]
name = "laguna"
version = "0.1.0"
authors = ["jdiazcano"]
edition = "2018"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]


[dependencies]
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.*"

clap = "3.0.0-beta.2" # Cli parser
tera = "1.*" # Tera templates
git2 = "0.13.*" # Cloning, fetching and updating the actual repositories of templates
url = "2.*" # Parse url to know if local or remote repository
dialoguer = "0.6.*" # Ask for password when cloning/updating a private repository
heck = "0.3.*" # Add support for camel_case, snake_case... filters in tera
walkdir = "2.*" # Walk through the directory (recursively) to apply the templates